# projecto-final-c

./: INFORME_PROYECTO_FINAL.md  README.md
Fali/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
Guillaume/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
Ignacio/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
Nayeli/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
Patrick/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
Proyecto/: CMakeLists.txt  dataset.csv  main.cpp  pong_ascii.cpp  pong_ascii.h  train_pong.cpp  utils.h
Proyecto/include/utec/agent/: EnvGym.h  PongAgent.h  state.h
Proyecto/include/utec/algebra/: tensor.h
Proyecto/include/utec/nn/: activation.h  dense.h  interfaces.h  neural_network.h
Proyecto/nn/: activation.h  dense.h  interfaces.h  loss.h  neural_network.h  optimizer.h
Proyecto/run_all_test/linux-macOS/: run_all_test.sh
Proyecto/run_all_test/windows/: run_all_test.bat
Proyecto/tests/: test_ReLu.cpp  test_ReLu.h  test_convergence.cpp  test_convergence.h  test_dense_layer.cpp  test_dense_layer.h
Yeimi/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
